# django-example

./: .gitignore  pyproject.toml
django_example/: settings.py
polls/: admin.py  models.py  views.py
polls/migrations/: 0001_initial.py
