[tool.poetry]
name = "django-example"
version = "0.1.0"
description = "A Django Example"
authors = ["Seth Wang <pkyosx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
